test fix by removing z-index of callout links

--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,6 @@ nav ul #topbar-cta-button a span {
   font-size: 28px !important;
 }
 
-.chat-assistant-floating-input {
-  z-index: 20 !important;
+.callout .link {
+  z-index: 0 !important;
 }
